# investment-simulator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
investment_lambda/: README.md  allocations.py  app.py  env.py  package-lock.json  package.json  simulation.py
investment_lambda/domain/: portfolios.py  questionnaire.py  simulation.py
investment_lambda/infra/: s3.py
investment_lambda/repository/: portfolio_model.py  portfolio_repo.py  questionnaire_repo.py
investment_lambda/types/: portfolio.py  questionnaire.py
investment_lambda/utils/: auth.py
investment_lambda/value_objects/: asset_allocation.py
investment_simulator/: __init__.py  allocations.py  contribution_functions.py  contributions.py  portfolio_simulation.py  portfolios.py  tax.py  utils.py
investment_simulator/value_objects/: simulation.py
tests/contributions/: test_contributions.py
tests/simulation/: test_growth.py  test_simulation.py
tests/test_simulator/simulation/: test_allocations.py  test_growth.py
tests/test_simulator/tax/: test_tax.py
tests/test_simulator/unit/: test_unit.py
tests/unit/: test_unit.py
