[tool.poetry]
name = "investment_simulator"
version = "0.1.0"
description = "Library for simulating a persons investment portfolio over time based on risk and return"
authors = ["Siddha Ishmael Ganesan <siddha.ganesan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
numpy = "^1.19.4"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
