[tool.poetry]
name = "investment_simulator"
version = "0.2.0"
description = "Library for simulating a persons investment portfolio over time based on risk and return"
authors = ["Siddha Ishmael Ganesan <siddha.ganesan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.rc1"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
flake8 = "^3.8.4"
mypy = "^0.790"

[mypy]
python_version = 3.8
check_untyped_defs = true

[mypy-numpy]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
